workflow internal methods

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "no-console": ["off"],
     "no-underscore-dangle": ["off"],
     "no-use-before-define": ["off"],
+    "prefer-destructuring": ["off"],
     "node/no-unsupported-features/es-syntax": [
       "error",
       {
