--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "husky": "2.4.0",
     "lint-staged": "8.1.7",
     "mocha": "5.2.0",
+    "nock": "^10.0.6",
     "prettier": "1.16.4",
     "proxyquire": "2.1.0",
     "sinon": "7.2.3",
