--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zenaton",
+  "name": "asdaasbdjasbdbasdbashjdbashjbdhajsbdjashbdlasdsdasd",
   "version": "0.7.1",
   "description": "Zenaton library",
   "main": "lib/index.js",
